lll-site.css
/* ... */
h2 {
  margin-top: 0px;
  color: var(--gold);
  /*box-shadow: inset 0 -10px 0 0 var(--blue);*/
  width: max-content;
}

img {
  height: auto;
  width: 100%;
}

.link-card img {
  height: auto;
  width: auto;
  border-radius: 0%;
}

.donations {
  height: 200px;
}
.paypal {
  text-align: center;
}
.paypal form {
  height: 50px;
}
.paypal form img {
  height: inherit;
}

.video iframe {
  height: 315px;
  width: 500px;
}

.footer ul {
  list-style: none;
  margin-left: 0px;
  padding: 0px;
}
.footer ul li {
  float: left;
  padding-right: 10px;
  font-size: 0.8em;
}
.footer ul li a {
  text-decoration: none;
  text-transform: uppercase;
  color: var(--blue);
  font-family: sans-serif;
}
.footer p {
  font-size: 0.6em;
  font-family: sans-serif;
  color: var(--red);
}
.footer a:hover {
  color: var(--blue2);
}

/* FONT AWESOME ICONS */
.fas, .fab {
  font-size: 3em;
  text-align: center;
  margin-right: 10px;
  color: #aaa;
}

.fas:hover, .fab:hover {
  color: var(--blue);
}

.footer .footer_icon_text {
  max-width: 70%;
  font-size: 1.2em;
  color: var(--black);
}

.footer_desc {
  margin-top: 50px;
}

/* SLIDESHOW STYLING */
#slideshow {
  margin: 50px auto;
  position: relative;
  /*width: 480px;*/
  height: 400px;
  padding: 10px;
  /*box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);*/
  overflow: hidden;
}

#slideshow > div {
  position: absolute;
  top: 10px;
  left: 10px;
  right: 10px;
  bottom: 10px;
}

/* LLC DONATIONS SECTION */
.disclaimer {
  margin-top: 50px;
  margin-bottom: 50px;
}

.touch ._4g34 {
  color: #253BFF;
}

/* PRESS PAGE LINK STYLING */
.web-link{
    color: #EE3233;
  }

.link-card{
    box-shadow: 0 4px 8px 0 var(--box), 0 6px 20px 0 rgba(0,0,0,0.19);
    margin: 30px 0 30px 0;
    overflow: hidden;
}

.link-card-logo{
    width: 200px;
    text-align: center;
    padding: 0px 0px 0px 0px;
    float: left;
}

.link-card-link {
  	padding: 1px 75px 15px 15px;
    font-size: 15px;
    width: 100%;
}
.link-card-link a {
  text-decoration: none;
}

.link-card-link p {
  	color: #000;
    padding-right: 10px;
    margin-right: 10px;
}

#press_bg .link-card-link p:nth-child(2) {
  color: var(--blue);
}

.link-red {
    color: red;
}
/* COLLAPSIBLE for ALL MEDIA & PRESS */
button.collapsible::after {
  content: '\002B';
  color: var(--blue);
  font-weight: bold;
  float: right;
  margin-left: 5px;
}

/* Style the button that is used to open and close the collapsible content */
.collapsible {
  background-color: #eee;
  color: var(--black);
  cursor: pointer;
  padding: 18px;
  width: 100%;
  border: none;
  text-align: left;
  outline: none;
  font-size: 15px;
}
/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
.active, .collapsible:hover {
  background-color: #ccc;
}
/* Style the collapsible content. Note: hidden by default */
.press_content, .infographics, .papers {
  padding: 0 18px;
  display: none;
  overflow: hidden;
  background-color: #f1f1f1;
}

/* RESOURCES PAGE */
.item3 details ul li iframe {
  width: 100%;
  display:block;
}

.item3 .YTvid {
  padding: 0px;
}

.weblink-items li {
  margin: 0 0 5px 0;
}

.weblink-items li a {
  text-decoration: none;
}

#myBtn {
  color: var(--red);
}

/* MEDIA QUERIES: iPhone X and up */

@media (min-width: 414px) and (max-width: 768px) {
  .container {
    grid-template-rows: auto 200px auto;
    grid-template-areas:
      "image image"
      "name name"
      "bio bio"
      "footer footer"
    }
  #llc_bg .container {
    grid-template-rows: auto 250px auto;
  }
  #allpub_bg .container {
    grid-template-rows: auto 300px auto;
  }
  #home_bg body {
      background-image: url("");
    }
  #prof_bg body {
      background-image: url("");
    }
  #ease_bg {
    background-image: url("");
    }  
  #llc_bg body {
      background-image: url("");
    }
  #press_bg body {
      background-image: url("");
    }
  #allpress_bg body {
      background-image: url("");
    }

  #allpress_bg #resources_bg {
    background-image: url("");
  }

  h1 {
    font-size: 4em;
  }

  #slideshow {
    margin: 0px;
    height: 250px;
  }

  .item4 {
    display: grid;
    grid-area: image;
    height: 100%;
    width: auto;
  }
  
  .item3 iframe {
      height: 315px;
      width: 308px;
    }

  .fas, .fab {
      font-size: 3em;
      text-align: center;
      margin-right: 10px;
      color: var(--blue);
    }
    
  .footer .footer_icon_text {
      max-width: 100%;
      font-size: 0.9em;
      color: var(--black);
    }

    #llc_bg .item3 {
      margin-top: 0px;
    }

    .link-card-ease {
      display: none;
    }

    .header {
      height: 400px;
    }

    .card-ease-mobile-top {
      box-shadow: 0 4px 8px 0 var(--box), 0 6px 20px 0 rgba(0,0,0,0.19);;
      max-width: 300px;
      margin: auto;
      text-align: center;
      margin-bottom: 25px;
      float: left;
      display: grid;
    }

    .card-wrapper {
      grid-template-columns: auto;
      grid-gap: 20px;
    }

    #ease .item3 {
      margin-top: 0px;
    }

    #ease .footer {
      margin: 40px;
    }
  
    #ease .footer_icon_text {
      max-width: 100%;
    }

    #ease .hamburger {
      left: calc(100% - 144px);
    }
  
    .ease_image {
      width: 100px; 
      margin: 50px 0px 10px 20px;
    }

    .llc_image {
      width: 200px; 
      margin: 42px 0px 10px -45px;
    }

    #ease .item3 h2 {
      padding-left: 20px;
      width: 90%;
    }
}

/* iPad & Tablets */
@media (min-width:768px) and (max-width: 833px)
{
  .card-wrapper {
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 40px;
  }
}
/* ... */

